# live-english-tutor

./: .env.example  .gitignore  .gitmodules  Makefile  README.md  docker-compose.agent.yml  docker-compose.livekit.yml  docker-compose.ollama.yml  docker-compose.yml
backend-fastapi/: Dockerfile  pyproject.toml
backend-fastapi/app/: config.py  firebase_app.py  logging_config.py  main.py  middleware.py
backend-fastapi/app/api/: agent_callbacks.py  auth.py  deps.py  materials.py  messages.py  sessions.py
backend-fastapi/app/models/: __init__.py  correction.py  material.py  message.py  session.py  user.py
backend-fastapi/app/schemas/: auth.py  material.py  message.py  session.py
backend-fastapi/app/services/: livekit_service.py  material_service.py  r2_service.py  report_service.py
docs/: FRD.md  PRD.md  architecture.md  user-guide.md
docs/superpowers/specs/: 2026-04-16-lesson-ui-enhancements-design.md
frontend-web/: .env.example  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend-web/src/: App.tsx  firebase.ts  index.css  router.tsx
frontend-web/src/api/: auth.ts  client.ts  materials.ts  sessions.ts
frontend-web/src/components/lesson/: AgentStatus.tsx  CaptionPanel.tsx  CorrectionPanel.tsx  ToolBar.tsx  VideoGrid.tsx  VoiceControls.tsx
frontend-web/src/hooks/: useAgentData.ts
frontend-web/src/pages/: DashboardPage.tsx  LessonPage.tsx  LoginPage.tsx  ReportPage.tsx  SpeakPage.tsx
frontend-web/src/pages/listen/: ListenPlayerPage.tsx  (+2 more)
frontend-web/src/store/: authStore.ts
livekit-agent/: Dockerfile  pyproject.toml
livekit-agent/agent/: agent_factory.py  backend_client.py  logging_config.py  main.py  prompts.py  state_machine.py  tutor_agent.py
livekit-agent/agent/plugins/: edge_tts.py  kokoro_tts.py  whisper_stt.py
openspec/changes/livekit-local-mode/: design.md  proposal.md  tasks.md
(+2 files in other folders)
