[project]
name = "live-english-tutor-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # silero VAD enabled; STT/TTS (deepgram, cartesia) still disabled
    # To re-enable STT/TTS: "livekit-agents[deepgram,silero,openai,cartesia]~=1.0"
    "livekit-agents[silero,openai]~=1.0",
    "httpx==0.27.2",
    "python-dotenv==1.0.1",
]

[tool.uv]
package = false
