[project]
name = "live-english-tutor-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Google Gemini Realtime handles STT + LLM + TTS natively (no separate services needed)
    "livekit-agents[google]~=1.0",
    "httpx>=0.28.1",
    "python-dotenv==1.0.1",
]

[tool.uv]
package = false
prerelease = "allow"
